Fixing style spacing issue

--- a/static/default.css
+++ b/static/default.css
@@ -586,7 +586,7 @@ img{
     top: 0;
     left: 0;
     right: 0;
-    bottom: 50px;
+    bottom: 55px;
 }
 
 .raspchat-body-container {
